--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,17 @@
         <title>Doujinshi.info</title>
         <meta name="description" content="">
         <meta name="keywords" content="">
+
+        <link rel="apple-touch-icon" sizes="152x152" href="<%= require('./icons/apple-touch-icon.png') %>">
+        <link rel="icon" type="image/png" sizes="32x32" href="<%= require('./icons/favicon-32x32.png') %>">
+        <link rel="icon" type="image/png" sizes="16x16" href="<%= require('./icons/favicon-16x16.png') %>">
+        <link rel="manifest" href="<%= require('./icons/site.webmanifest') %>">
+        <link rel="mask-icon" href="<%= require('./icons/safari-pinned-tab.svg') %>" color="#5bbad5">
+        <meta name="apple-mobile-web-app-title" content="Doujinshi.info">
+        <meta name="application-name" content="Doujinshi.info">
+        <meta name="msapplication-TileColor" content="#2d89ef">
+        <meta name="theme-color" content="#ffffff">
+
         <link href="/<%=htmlWebpackPlugin.files.chunks.main.css %>" rel="stylesheet">
         <script async src="https://www.googletagmanager.com/gtag/js?id=<%= process.env.GA_ID %>"></script>
         <script>
